adjust site-body and site-sidebar.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -133,30 +133,8 @@
               {% endfor %}
             {% endif %}
 
-            <div class="site-body">
-              {% block content %}{% endblock %}
-            </div>
-
-            {% block sidebar %}
-              <div class="site-sidebar">
-                <div class="site-aside">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, quo, ipsam,
-                    temporibus, nulla voluptate vero numquam porro necessitatibus libero molestias
-                    natus alias repellat aliquid neque asperiores vitae beatae voluptates nobis
-                    excepturi aut labore quia fugiat eaque corrupti rem velit deserunt.
-                  </p>
-                </div>
-                <div class="site-aside">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, quo, ipsam,
-                    temporibus, nulla voluptate vero numquam porro necessitatibus libero molestias
-                    natus alias repellat aliquid neque asperiores vitae beatae voluptates nobis
-                    excepturi aut labore quia fugiat eaque corrupti rem velit deserunt.
-                  </p>
-                </div>
-              </div>
-            {% endblock %}
+            {% block content %}{% endblock %}
+            {% block sidebar %}{% endblock %}
           </div>
         </div>
       </div>
