--- a/src/Adstacy/AppBundle/Resources/public/less/variables.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/variables.less
@@ -1,6 +1,7 @@
 @import "./bootstrap/variables.less";
 @body-bg: #eee;
-@brand-primary: #99e58c;
+@brand-primary: #b00;
+// @brand-primary: #99e58c;
 @navbar-default-bg: #fff;
 @border-color: #ccc;
 @input-border-focus: #bbb;
