--- a/src/Adstacy/AppBundle/Resources/views/App/contact_us.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/contact_us.html.twig
@@ -22,7 +22,7 @@
 {% endblock %}
 
 {% block content %}
-  <div id="contactus-container" class="item panel panel-default">
+  <div id="contactus-container" class="panel panel-default">
     <div class="panel-heading">
       <h1>Contact Us<i class="icon icon-envelope-alt"></i></h1>
     </div>
