--- a/src/Adstacy/UserBundle/Resources/views/Resetting/request.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Resetting/request.html.twig
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block content %}
-  <div id="reset-password" class="item panel panel-default">
+  <div id="reset-password" class="panel panel-default">
     <div class="panel-heading">
       <h1>Reset Password</h1>
     </div>
