--- a/src/Adstacy/UserBundle/Resources/views/Resetting/reset.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Resetting/reset.html.twig
@@ -25,7 +25,7 @@
 {% block content %}
 {% trans_default_domain 'FOSUserBundle' %}
 
-<div id="reset-verification" class="item panel panel-default">
+<div id="reset-verification" class="panel panel-default">
   <div class="panel-heading">
     <h1>Reset Verification</h1>
   </div>
