--- a/src/Adstacy/AppBundle/Resources/public/less/layout/login.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/login.less
@@ -1,19 +1,13 @@
 @import "../variables.less";
 
 #login {
+  margin: 0 15px;
+
   hr {
     margin: 0;
   }
 
   .btn-block + .btn-block {
     margin-top: 15px;
-  }
-}
-
-@media screen and (max-width: @screen-tablet) {
-  #login {
-    width: 100%;
-    margin-top: 20px;
-    margin-bottom: 20px;
   }
 }
