--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -161,7 +161,7 @@
 
         <div class="panel-body">
           <a href="{{ path('adstacy_app_user_ads', {username: user.username}) }}" class="btn btn-default btn-block" style="margin-bottom: 10px;">{{"more_ads"|trans}}</a>
-            <div class="follow-action">
+            <div class="user-action">
               {% if app.user %}
                 {% if app.user != user %}
                   {% set hasFollow = app.user.hasFollowUser(user) %}
