--- a/src/Adstacy/AppBundle/Resources/views/User/follow_button.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/follow_button.html.twig
@@ -2,7 +2,7 @@
 {% set loggedInUser = app.user %}
 {% if user and loggedInUser and user != loggedInUser %}
   {% set followed = loggedInUser.hasFollowUser(user) %}
-  <div class="follow-action">
+  <div class="user-action">
     <a href="{{ path('adstacy_app_user_follow', {username: user.username}) }}" class="btn btn-primary btn-block follow-user {% if followed %}hide{% endif %}">Follow</a>
     <a href="{{ path('adstacy_app_user_unfollow', {username: user.username}) }}" class="btn btn-success btn-block unfollow-user {% if not followed %}hide{% endif %}">Following</a>
   </div>
