Add comments to ad.html.twig

--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -77,6 +77,14 @@
       </div>
     </div>
   </div>
+  {% if ad.commentsCount > ad.comments|length %}
+    <a href="#">load more comments</a>
+  {% endif %}
+  {% for comment in ad.comments %}
+    <div class="advert-comment">
+      <p>{{ comment.content }}</p>
+    </div>
+  {% endfor %}
   {% if app.user %}
   <div class="advert-comment">
     <form action="{{ path('adstacy_app_ad_comment', {id: ad.id}) }}" method="post">
