Add load comments to show ad.

--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -78,7 +78,7 @@
     </div>
   </div>
   {% if ad.commentsCount > ad.comments|length %}
-    <a href="#">load more comments</a>
+    <a href="#">{{"comment.load_more"|trans}}</a>
   {% endif %}
   {% for comment in ad.comments %}
     <div class="advert-comment">
