--- a/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
@@ -3,8 +3,8 @@
 
 #show-advert {
   position: relative;
-  width: 1000px;
-  margin: 14px auto;
+  // width: 1000px;
+  // margin: 14px auto;
 
   .panel-body {
     padding: 10px;
@@ -17,8 +17,8 @@
 }
 
 #show-advert-content {
-  width: 750px;
-  float: left;
+  // width: 750px;
+  // float: left;
 
   .show-advert-desc {
     font-size: 14px;
