--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -7,68 +7,36 @@
     </a>
   </div>
 
-  <div class="advert-tags">
-    <a href="#">#kuliner</a>
-    <a href="#">#masakan</a>
-    <a href="#">#medan</a>
-    <a href="#">#indonesia</a>
-    <a href="#">#enak</a>
-    <a href="#">#mie</a>
-    <a href="#">#sotoAyam</a>
-    <a href="#">#pedas</a>
-    <a href="#">#pedas</a>
-  </div>
-
-  <div class="advert-detail">
-    <div class="advert-user clearfix">
-      {% include 'AdstacyAppBundle:User:user_mini.html.twig' with {user: ad.user, text: ago(ad.created), as_link: true} %}
+  <div class="advert-action clearfix">
+    <div class="btn-group pull-left">
+      {# <a href="{{ path('adstacy_app_ad_promotes', {id: ad.id}) }}" class="btn btn-default"><span class="promotes-count">{{ ad.promoteesCount }}</span></a> #}
+      {% if app.user %}
+        {% set promoted = app.user.hasPromote(ad) %}
+        <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-default btn-promote promote {% if promoted %}hide{% endif %}" title="Broadcast">
+          <i class="icon icon-bullhorn"></i><span>BROADCAST</span>
+        </a>
+        <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="btn btn-primary btn-promote unpromote {% if not promoted %}hide{% endif %}" title="Unbroadcast">
+          <i class="icon icon-bullhorn"></i><span>UNBROADCAST</span>
+        </a>
+      {% else %}
+        <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-default btn-promote" title="Broadcast">
+          <i class="icon icon-bullhorn"></i><span>BROADCAST</span>
+        </a>
+      {% endif %}
     </div>
-    <p class="advert-desc">
-      {{ parse_url(parse_hashtag(ad.description)) }}
-    </p>
-  </div>
-
-  <div class="advert-counter">
-    <a href="{{ path('adstacy_app_ad_promotes', {id: ad.id}) }}"><span class="promotes-count">{{ ad.promoteesCount }}</span> Broadcasts</a>
-    &middot;
-    <a href="{{ path('adstacy_app_ad_show', {id: ad.id}) }}#comments"><span class="comments-count">{{ ad.commentsCount }}</span> Comments</a>
-  </div>
-
-  <div class="advert-action btn-group btn-group-justified">
-    {% if app.user %}
-      {% set promoted = app.user.hasPromote(ad) %}
-      <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-default btn-promote promote {% if promoted %}hide{% endif %}" title="Broadcast">
-        <i class="icon icon-bullhorn"></i><span>BROADCAST</span>
+    <div class="btn-group pull-right">
+      <a class="btn btn-default btn-share">
+        <i class="icon icon-share"></i>
+        <span>SHARE</span>
       </a>
-      <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="btn btn-primary btn-promote unpromote {% if not promoted %}hide{% endif %}" title="Unbroadcast">
-        <i class="icon icon-bullhorn"></i><span>UNBROADCAST</span>
+      <a class="btn btn-default btn-option">
+        <i class="icon icon-ads"></i>
+        <span>MORE</span>
       </a>
-    {% else %}
-      <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-default btn-promote" title="Broadcast">
-        <i class="icon icon-bullhorn"></i><span>BROADCAST</span>
-      </a>
-    {% endif %}
-
-    <a class="btn btn-default btn-comment">
-      <i class="icon icon-envelope-alt"></i>
-      <span>COMMENT</span>
-    </a>
-    <a class="btn btn-default btn-share">
-      <i class="icon icon-share"></i>
-      <span>SHARE</span>
-    </a>
+    </div>
   </div>
 
   <div class="advert-action-content">
-    {% if app.user %}
-      <div class="advert-comment">
-        <form action="{{ path('adstacy_app_ad_comment', {id: ad.id}) }}" method="post">
-          <textarea name="comment[content]" required="required" class="comment-box" placeholder="{{"form_comment.placeholders.content"|trans}}"></textarea>
-          <input type="submit" value="{{"comment"|trans}}" class="hide">
-        </form>
-      </div>
-    {% endif %}
-
     {% set adUrl = url('adstacy_app_ad_show', {id: ad.id}) %}
     {% set tags = ad.tags|join(',') %}
     {% set desc = remove_hashtag(ad.description) %} {# remove hashtags because # character is fragment in url #}
@@ -83,4 +51,34 @@
       </a>
     </div>
   </div>
+
+  <div class="advert-detail">
+    <div class="advert-user clearfix">
+      {% include 'AdstacyAppBundle:User:user_mini.html.twig' with {user: ad.user, text: ago(ad.created), as_link: true} %}
+    </div>
+    <p class="advert-desc">
+      {{ parse_url(ad.description) }}
+    </p>
+    <div class="advert-tags">
+      <a href="#">#kuliner</a>
+      <a href="#">#masakan</a>
+      <a href="#">#medan</a>
+      <a href="#">#indonesia</a>
+      <a href="#">#enak</a>
+      <a href="#">#mie</a>
+      <a href="#">#sotoAyam</a>
+      <a href="#">#pedas</a>
+      <a href="#">#pedas</a>
+    </div>
+  </div>
+
+  <a href="{{ path('adstacy_app_ad_show', {id: ad.id}) }}#comments" class="btn-comments-count btn btn-default btn-block"><span class="comments-count">{{ ad.commentsCount }}</span> Comments</a>
+  {% if app.user %}
+    <div class="advert-comment">
+      <form action="{{ path('adstacy_app_ad_comment', {id: ad.id}) }}" method="post">
+        <textarea name="comment[content]" required="required" class="comment-box" placeholder="{{"form_comment.placeholders.content"|trans}}"></textarea>
+        <input type="submit" value="{{"comment"|trans}}" class="hide">
+      </form>
+    </div>
+  {% endif %}
 </div>
