Style create ad.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -96,6 +96,7 @@
       {% endblock %}
 
       <div id="site-container" class="site-container site-wrapper">
+        {% block navbar %}
         <div class="site-menu">
           <nav id="site-menu-inner" class="site-menu-inner">
             <ul class="site-main-menu">
@@ -127,6 +128,7 @@
             </ul>
           </nav>
         </div>
+        {% endblock %}
 
         <div class="site-content">
           <div class="site-content-inner clearfix">
