--- a/src/Adstacy/AppBundle/Resources/public/less/bootstrap-tagsinput.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/bootstrap-tagsinput.less
@@ -1,13 +1,11 @@
 .bootstrap-tagsinput {
   background-color: #fff;
-  border: 1px solid #ccc;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  border-top: 1px solid #e3e3e3;
   display: inline-block;
   padding: 4px 6px;
   margin-bottom: 10px;
   color: #555;
   vertical-align: middle;
-  border-radius: 4px;
   max-width: 100%;
   line-height: 22px; 
 
