--- a/src/Adstacy/AppBundle/Resources/public/less/module/wysihtml5.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/module/wysihtml5.less
@@ -8,7 +8,8 @@
       position: relative;
       z-index: 1;
       text-align: center;
-      border: 1px solid #e3e3e3; /* IE 8 and below */
+      border-top: 1px solid #e3e3e3; /* IE 8 and below */
+      border-bottom: 1px solid #e3e3e3; /* IE 8 and below */
       text-align: center;
       padding: 5px;
     }
@@ -177,7 +178,6 @@
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     padding: 10px;
-    word-wrap: normal;
     -ms-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
