Add icon to create ad editor.

--- a/src/Adstacy/AppBundle/Resources/public/less/module/wysihtml5.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/module/wysihtml5.less
@@ -16,6 +16,7 @@
 
     .commands {
       margin: 0;
+      padding: 0;
       list-style-type: none;
       li {
         display: inline;
@@ -129,10 +130,7 @@
     border: 1px solid #ccc;
     padding: 5px 10px;
     background: #FFFBE0;
-    position: absolute;
-    width: 810px;
     text-align: center;
-    top: 45px;
   }
 
   [data-wysihtml5-dialog] input {
