--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -34,6 +34,9 @@
 #create-advert-tags {
   padding: 5px 5px 5px 10px;
   border-top: 1px solid #e3e3e3;
+  i:before {
+    margin: 0;
+  }
 }
 
 #create-advert-url {
