--- a/src/Adstacy/AppBundle/Resources/views/Form/fields.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Form/fields.html.twig
@@ -89,15 +89,14 @@
     <div id="wysihtml5-editor-toolbar">
       <header>
         <ul class="commands">
-          <li data-wysihtml5-command="bold" title="Make text bold (CTRL + B)" class="command"><i class="icon-bold"></i></li>
-          <li data-wysihtml5-command="italic" title="Make text italic (CTRL + I)" class="command"><i class="icon-italic"></i></li>
-          <li data-wysihtml5-command="insertUnorderedList" title="Insert an unordered list" class="command"><i class="icon-list-ul"></i></li>
-          <li data-wysihtml5-command="insertOrderedList" title="Insert an ordered list" class="command"><i class="icon-list-ol"></i></li>
-          <li data-wysihtml5-command="createLink" title="Insert a link" class="command"><i class="icon-link"></i></li>
-          <li data-wysihtml5-command="insertImage" title="Insert an image" class="command"><i class="icon-camera"></i></li>
+          <li data-wysihtml5-command="bold" title="Make text bold (CTRL + B)" class="command"><i class="icon icon-bold"></i></li>
+          <li data-wysihtml5-command="italic" title="Make text italic (CTRL + I)" class="command"><i class="icon icon-italic"></i></li>
+          <li data-wysihtml5-command="insertUnorderedList" title="Insert an unordered list" class="command"><i class="icon icon-list-ul"></i></li>
+          <li data-wysihtml5-command="insertOrderedList" title="Insert an ordered list" class="command"><i class="icon icon-list-ol"></i></li>
+          <li data-wysihtml5-command="createLink" title="Insert a link" class="command"><i class="icon icon-link"></i></li>
+          <li data-wysihtml5-command="insertImage" title="Insert an image" class="command"><i class="icon icon-camera"></i></li>
           <li data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h1" title="Insert headline 1" class="command">H1</li>
           <li data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h2" title="Insert headline 2" class="command">H2</li>
-          <li data-wysihtml5-action="change_view" title="Show HTML" class="action">&lt;html&gt;</li>
         </ul>
       </header>
       <div data-wysihtml5-dialog="createLink" style="display: none;">
