Use wysihtml5.0.3 and size matters to autoresize.

--- a/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
@@ -105,6 +105,7 @@
     '@AdstacyAppBundle/Resources/public/js/bootstrap-tagsinput.js'
     '@AdstacyAppBundle/Resources/public/js/wysihtml5_parser_rules_advanced.js'
     '@AdstacyAppBundle/Resources/public/js/wysihtml5.js'
+    '@AdstacyAppBundle/Resources/public/js/jquery.wysihtml5_size_matters.js'
     '@AdstacyAppBundle/Resources/public/js/page/create_ad.js'
     '@AdstacyAppBundle/Resources/public/js/jquery-ui.js'
     '@AdstacyAppBundle/Resources/public/js/load-image.min.js'
