--- a/src/Adstacy/AppBundle/Resources/public/less/module/wysihtml5.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/module/wysihtml5.less
@@ -169,7 +169,7 @@
   textarea {
     width: 100%;
     background: transparent;
-    height: 100%;
+    min-height: 100px;
     border: 0;
     resize: none;
     white-space: pre;
