Add align to text editor.

--- a/src/Adstacy/AppBundle/Resources/views/Form/fields.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Form/fields.html.twig
@@ -91,6 +91,9 @@
         <ul class="commands">
           <li data-wysihtml5-command="bold" title="Make text bold (CTRL + B)" class="command"><i class="icon icon-bold"></i></li>
           <li data-wysihtml5-command="italic" title="Make text italic (CTRL + I)" class="command"><i class="icon icon-italic"></i></li>
+          <li data-wysihtml5-command="justifyLeft" title="Align left" class="command"><i class="icon icon-align-left"></i></li>
+          <li data-wysihtml5-command="justifyCenter" title="Align center" class="command"><i class="icon icon-align-center"></i></li>
+          <li data-wysihtml5-command="justifyRight" title="Align right" class="command"><i class="icon icon-align-right"></i></li>
           <li data-wysihtml5-command="insertUnorderedList" title="Insert an unordered list" class="command"><i class="icon icon-list-ul"></i></li>
           <li data-wysihtml5-command="insertOrderedList" title="Insert an ordered list" class="command"><i class="icon icon-list-ol"></i></li>
           <li data-wysihtml5-command="createLink" title="Insert a link" class="command"><i class="icon icon-link"></i></li>
