--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -50,24 +50,18 @@ a.mention:hover {
 
 .dropdown-menu {
   padding: 0;
+  margin: 0;
 
   > li {
-    margin-bottom: 0;
-  }
+    border-top: 1px solid @border-color;
 
-  > li > a {
-    border-top: 1px solid #ddd;
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
+    &:first-child {
+      border-top: 0;
+    }
 
-  li:first-child a {
-    border-top-width: 0;
-    .border-top-radius(@border-radius-small);
-  }
-
-  li:last-child a {
-    .border-bottom-radius(@border-radius-small);
+    > a {
+      padding: 6px 12px;
+    }
   }
 }
 
