--- a/src/Adstacy/AppBundle/Resources/public/less/layout/notification.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/notification.less
@@ -4,8 +4,12 @@
 .notif-count {
   position: absolute;
   right: 10px;
-  top: 10px;
+  top: 5px;
   z-index: 2000;
+  border: 2px solid @navbar-inverse-bg;
+  font-size: 10px;
+  padding: 2px;
+  min-width: 20px;
 }
 
 .open > #top-notifications {
