--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -1,4 +1,3 @@
-
 <div class="advert item">
   {% if ad.type == 'image' %}
     <div class="advert-img">
@@ -29,29 +28,36 @@
       {% if app.user %}
         {% set promoted = app.user.hasPromote(ad) %}
         <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-default btn-promote promote {% if promoted %}hide{% endif %}" title="Broadcast">
-          <i class="icon icon-bullhorn"></i><span>BROADCAST</span>
+          <i class="icon icon-bullhorn"></i><span>broadcast</span>
         </a>
         <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="btn btn-primary btn-promote unpromote {% if not promoted %}hide{% endif %}" title="Unbroadcast">
-          <i class="icon icon-bullhorn"></i><span>UNBROADCAST</span>
+          <i class="icon icon-bullhorn"></i><span>unbroadcast</span>
         </a>
       {% else %}
         <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-default btn-promote" title="Broadcast">
-          <i class="icon icon-bullhorn"></i><span>BROADCAST</span>
+          <i class="icon icon-bullhorn"></i><span>broadcast</span>
         </a>
       {% endif %}
     </div>
     <div class="btn-group pull-right">
       <a class="btn btn-default btn-share">
         <i class="icon icon-share"></i>
-        <span>SHARE</span>
+        <span>share</span>
       </a>
-      <a class="btn btn-default btn-option">
-        <i class="icon icon-ads"></i>
-        <span>MORE</span>
-      </a>
-      <a href="{{ path('adstacy_app_ad_report', {id: ad.id}) }}" class="report">
-        <i class="icon-info"></i> Report
-      </a>
+      <div class="btn-group">
+        <a class="btn btn-default btn-option" data-toggle="dropdown">
+          <i class="icon icon-ads"></i>
+          <span>more</span>
+        </a>
+        <ul class="dropdown-menu pull-right">
+          <li><a href="{{ path('adstacy_app_ad_report', {id: ad.id}) }}" class="report"><i class="icon icon-flag"></i><span>report</span></a></li>
+          {% if app.user == ad.user %}
+            <li><a href="{{ path('adstacy_app_ad_edit', {id: ad.id}) }}"><i class="icon icon-edit"></i><span class="owner-action-label">{{ "edit"|trans }}</span></a></li>
+            <li><a data-toggle="modal" data-target="#confirm-modal"><i class="icon icon-delete"></i><span class="owner-action-label">{{ "delete"|trans }}</span></a></li>
+          {% endif %}
+        </ul>
+      </div>
+
     </div>
   </div>
 
@@ -62,12 +68,8 @@
     {% set twitterUrl = "https://twitter.com/share?url=#{adUrl}&text=#{desc}&hashtags=#{tags}" %}
     {% set facebookUrl = "https://www.facebook.com/sharer/sharer.php?u=#{adUrl}" %}
     <div class="advert-share btn-group btn-group-justified">
-      <a href="{{ facebookUrl }}" class="btn btn-facebook facebook-share">
-        <i class="icon-facebook"></i> Share
-      </a>
-      <a href="{{ twitterUrl }}" class="btn btn-twitter tweet">
-        <i class="icon-twitter twitter-share"></i> Tweet
-      </a>
+      <a href="{{ facebookUrl }}" class="btn btn-facebook facebook-share"><i class="icon icon-facebook"></i>Share</a>
+      <a href="{{ twitterUrl }}" class="btn btn-twitter tweet"><i class="icon icon-twitter twitter-share"></i>Tweet</a>
     </div>
   </div>
 
@@ -75,9 +77,7 @@
     <div class="advert-user clearfix">
       {% include 'AdstacyAppBundle:User:user_mini.html.twig' with {user: ad.user, text: ago(ad.created), as_link: true} %}
     </div>
-    <p class="advert-desc">
-      {{ parse_url(ad.description) }}
-    </p>
+    <p class="advert-desc">{{ parse_url(ad.description) }}</p>
     <div class="advert-tags">
       <a href="#">#kuliner</a>
       <a href="#">#masakan</a>
