--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -100,6 +100,23 @@
 .advert-comment {
   padding: 10px 15px;
   border-top: 1px solid @border-color;
+
+  .media,
+  .media .media {
+    margin-top: 10px;
+  }
+  .media:first-child {
+    margin-top: 0;
+  }
+
+  .media-body {
+    font-size: 12px;
+    line-height: 16px;
+
+    p {
+      margin: 0;
+    }
+  }
 }
 
 .btn-comments-count {
@@ -118,24 +135,6 @@
 }
 
 // OLD
-.advert-comment {
-  .comment-box {
-    width: 100%;
-    height: 44px;
-    padding: 2px 8px;
-    background-color: #eee;
-    resize: none;
-    border: solid @border-color;
-    border-width: 1px;
-    .border-bottom-radius(@border-radius-base);
-
-    &:focus {
-      outline: none;
-      background-color: #fff;
-    }
-  }
-}
-
 .user-mini {
   .user-desc {
     width: 100px;
