--- a/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
@@ -40,8 +40,6 @@
 
           </div>
         </div>
-        <div id="progressbar">
-        </div>
         <div class="image-preview medium">
           {% if data.image %}
             <img id="image-preview-img" src="{{ vich_uploader_asset(data, 'image') }}">
@@ -70,13 +68,16 @@
                 <h4 class="modal-title">{{"form_ad.upload_image_title"|trans}}</h>
               </div>
               <div class="modal-body">
-                <div id="create-advert-image">
-                    {{ form_widget(form.image) }}
-                    {{ form_widget(form.imagename) }}
-                  </span>
+                <div id="progressbar">
                 </div>
-                <p class="big-center-text">{{"or"|trans}}</p>
-                <input type="url" class="form-control" id="create-advert-url" placeholder="{{'form_ad.placeholders.url'|trans}}">
+                <div id="upload-image-container">
+                  <div id="create-advert-image">
+                      {{ form_widget(form.image) }}
+                    </span>
+                  </div>
+                  <p class="big-center-text">{{"or"|trans}}</p>
+                  <input type="url" class="form-control" id="create-advert-url" placeholder="{{'form_ad.placeholders.url'|trans}}">
+                </div>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">{{"cancel"|trans}}</button>
@@ -93,6 +94,7 @@
           }
         })
       }}
+      {{ form_widget(form.imagename) }}
       {{ form_rest(form) }}
       {{ form_end(form) }}
     </div>
