Finishing upload image form.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -40,7 +40,13 @@
 }
 
 #create-advert-url {
-  width: 100%;
+  width: 90%;
+  float: left;
+}
+
+#create-advert-url-ok {
+  width: 10%;
+  float: left;
 }
 
 #ad_title, #ad_youtubeId {
@@ -53,13 +59,19 @@
 
 #create-advert-image-trigger {
   display: block;
-  padding: 10px;
+  padding: 7px;
   text-align: center;
   background-color: #f2f2f2;
   color: #555;
   text-decoration: none;
   &:hover {
     background-color: #ddd;
+  }
+}
+
+#create-advert-image-modal {
+  .close {
+    opacity: 1;
   }
 }
 
