--- a/src/Adstacy/AppBundle/Resources/public/less/utilities.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/utilities.less
@@ -44,6 +44,16 @@ span.required {
   .hyphens();
 }
 
+.spinner-margin {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.help {
+  font-size: 12px;
+  color: #999;
+}
+
 /* unused
 .h-stack {
   display: table;
