--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -72,6 +72,7 @@
         '@AdstacyAppBundle/Resources/public/js/jquery.jscroll.js'
         '@AdstacyAppBundle/Resources/public/js/hogan.js'
         '@AdstacyAppBundle/Resources/public/js/typeahead.js'
+        '@AdstacyAppBundle/Resources/public/js/spin.js'
         'bundles/fosjsrouting/js/router.js'
         'js/fos_js_routes.js'
         '@AdstacyAppBundle/Resources/public/js/module/ajaxlink.js'
