--- a/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
@@ -71,17 +71,17 @@
                 <div id="progressbar">
                 </div>
                 <div id="upload-image-container">
+                  <p class="help">{{"form_ad.help.upload_from_computer"|trans}}</p>
                   <div id="create-advert-image">
                       {{ form_widget(form.image) }}
-                    </span>
                   </div>
                   <p class="big-center-text">{{"or"|trans}}</p>
-                  <input type="url" class="form-control" id="create-advert-url" placeholder="{{'form_ad.placeholders.url'|trans}}">
+                  <p class="help">{{"form_ad.help.upload_from_url"|trans}}</p>
+                  <div class="clearfix">
+                    <input type="url" class="form-control" id="create-advert-url" placeholder="{{'form_ad.placeholders.url'|trans}}">
+                    <button type="button" class="btn btn-primary" id="create-advert-url-ok">OK</button>
+                  </div>
                 </div>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">{{"cancel"|trans}}</button>
-                <button type="button" class="btn btn-primary">OK</button>
               </div>
             </div>
           </div>
