--- a/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
@@ -78,7 +78,7 @@
                   <p class="big-center-text">{{"or"|trans}}</p>
                   <p class="help">{{"form_ad.help.upload_from_url"|trans}}</p>
                   <div class="clearfix">
-                    <input type="url" class="form-control" id="create-advert-url" placeholder="{{'form_ad.placeholders.url'|trans}}">
+                    <input type="url" class="form-control" id="create-advert-url" name="url" placeholder="{{'form_ad.placeholders.url'|trans}}">
                     <button type="button" class="btn btn-primary" id="create-advert-url-ok">OK</button>
                   </div>
                 </div>
