--- a/src/Adstacy/AppBundle/Resources/views/Form/fields.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Form/fields.html.twig
@@ -120,16 +120,18 @@
     {% set ids = ids|merge([image.id]) %}
   {% endfor %}
   <input type="hidden" id="{{ id }}" name="{{ full_name }}" value="{{ ids|join(',') }}">
-  <span class="btn btn-success fileinput-button">
-    <span>Add image</span>
-    <input type="file" id="{{ id }}_file" name="ad[image]">
-  </span>
-  <div id="{{ id }}_widget">
-    <ul>
-      {% for image in images %}
-        <li><img src="{{ vich_uploader_asset(image, 'image') }}"></li>
-      {% endfor %}
-    </ul>
+  <div id="ad-images-container" class="{% if obj.type != 'image' %}hide{% endif %}">
+    <span class="btn btn-success fileinput-button">
+      <span>Add image</span>
+      <input type="file" id="{{ id }}_file" name="ad[image]">
+    </span>
+    <div id="{{ id }}_widget">
+      <ul>
+        {% for image in images %}
+          <li><img src="{{ vich_uploader_asset(image, 'image') }}"></li>
+        {% endfor %}
+      </ul>
+    </div>
   </div>
 
   <script type="text/javascript">
